# tpmp-gr11b-lab4-chicken-nuggets

./: .gitignore  CMakeLists.txt  README.md
DataBase/: dataBase.db
includes/: AuthManager.h  Database.h  Models.h  Services.h
sqlite3/: sqlite3.exp  sqlite3.lib
src/: AuthManager.cpp  Database.cpp  Services.cpp  main.cpp
wiki/: Home.md
wiki/Pravlotskiy_Artem/: Pravlotskiy_Artem.md
